# kindle-dashboard

./: .env.example  .gitignore  Dockerfile  pyproject.toml  railway.toml  requirements.txt
scripts/: kindle_cron.sh  test_render.py
skill/: SKILL.md
src/: config.py  main.py
src/delivery/: push.py
src/fetchers/: calendar.py  gmail.py  news.py  todoist.py  weather.py
src/renderer/: screenshot.py  template.py
templates/: dashboard.html
